--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <section class="catalogo">
         <h2>Nuestros Servicios</h2>
         <div class="servicio">
-            <h3>Miniaturas para YouTube</h3>
+            <h3>Miniaturas para YouTube / YouTube Thumbnails 3$ USD - $50 MX</h3>
             <div class="ejemplos">
                 <img src="miniatura1.jpg" alt="Miniatura 1">
                 <img src="miniatura2.jpg" alt="Miniatura 2">
@@ -240,14 +240,15 @@
         </div>
 
         <div class="servicio">
-            <h3>Edición de Video (Escanea el QR de mi Instagram)</h3>
+            <h3>Edición de Video / Video editing  (Escanea el QR de mi Instagram /Scan QR) 3$ USD - $50 MX </h3>
+            <h4>Este repositorio no me deja tener archivos tan pesados como los videos / This repository doesn't allow me to upload files as large as videos</h4>
             <div class="ejemplos">
                 <img src="qr.jpg" alt="Ejemplos de edicion en mi IG">
             </div>
         </div>
 
         <div class="servicio">
-            <h3>Banners para Redes Sociales</h3>
+            <h3>Banners para Redes Sociales / Social Media Banners 10$ USD - $200 MX</h3>
             <div class="ejemplos">
                 <img src="banner1.jpg" alt="Banner 1">
                 <img src="banner2.jpg" alt="Banner 2">
@@ -256,7 +257,7 @@
         </div>
 
         <div class="servicio">
-            <h3>Anuncios</h3>
+            <h3>Anuncios / Ads 5$ USD - $100 MX</h3>
             <div class="ejemplos">
                 <img src="anuncio1.jpg" alt="Anuncio 1">
                 <img src="anuncio2.jpg" alt="Anuncio 2">
@@ -265,7 +266,7 @@
         </div>
 
         <div class="servicio">
-            <h3>Emotes</h3>
+            <h3>Emotes 3$ USD - $50 MX </h3>
             <div class="ejemplos">
                 <img src="emote1.jpg" alt="Emote 1">
                 <img src="emote2.jpg" alt="Emote 2">
@@ -274,7 +275,7 @@
         </div>
 
         <div class="servicio">
-            <h3>Marco de Stream</h3>
+            <h3>Marco de Stream / Stream Overlay 10$ USD - $200 MX </h3>
             <div class="ejemplos">
                 <img src="stream1.jpg" alt="Fondo de Stream 1">
                 <img src="stream2.jpg" alt="Fondo de Stream 2">
@@ -286,6 +287,7 @@
 
     <section class="contactos">
         <h2>Contactos</h2>
+        <h3>Te cotizo por cualquiera de estos medios</h3>
         <div class="redes-sociales">
             <div class="red-social">
                 <img src="logo-instagram.png" alt="Instagram">
