--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
 
         <div class="servicio">
-            <h3>Edición de Video / Video editing  (Escanea el QR de mi Instagram /Scan QR) 3$ USD - $50 MX </h3>
+            <h3>Edición de Video / Video editing  (Escanea el QR de mi Instagram / Scan QR) 3$ USD - $50 MX </h3>
             <h4>Este repositorio no me deja tener archivos tan pesados como los videos / This repository doesn't allow me to upload files as large as videos</h4>
             <div class="ejemplos">
                 <img src="qr.jpg" alt="Ejemplos de edicion en mi IG">
@@ -286,8 +286,8 @@
     </section>
 
     <section class="contactos">
-        <h2>Contactos</h2>
-        <h3>Te cotizo por cualquiera de estos medios</h3>
+        <h2>Contactos / Contacts</h2>
+        <h3>Te cotizo por cualquiera de estos medios / I can send you a quote through any of these platforms</h3>
         <div class="redes-sociales">
             <div class="red-social">
                 <img src="logo-instagram.png" alt="Instagram">
