--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diseño y Edición Unbreakable</title>
+    <title>Unbreakable Editor</title>
     <link rel="icon" href="logo.png" type="image/jpg">
     <style>
         body {
@@ -218,16 +218,17 @@
 <body>
     <header>
         <img src="logo.png" alt="Logo">
-        <h1>Diseño y Edición Unbreakable</h1>
+        <h1>Unbreakable Editor</h1>
     </header>
 
     <section class="presentacion">
-        <h2>Diseño y Edición Unbreakable</h2>
-        <p>¡Hola! Soy Unbreakable Editor, un profesional en diseño y edición de video con más de 4 años de experiencia. Mi objetivo es ayudarte a crear contenido visualmente impactante para tus redes sociales, TikTok, YouTube, Twitch y más. Con un enfoque en la creatividad y la calidad, te ofrezco servicios personalizados que se adaptan a tus necesidades. ¡Trabajemos juntos para hacer que tu contenido destaque!</p>
+        <h2>Hola Soy Unbreakable Editor / Hi I'm Unbreakable Editor</h2>
+        <p>Soy un profesional en diseño y edición de video con 4 años de experiencia. Mi objetivo es ayudarte a crear contenido visualmente impactante para tus redes sociales, TikTok, YouTube, Twitch y más. Con un enfoque en la creatividad y la calidad, te ofrezco servicios personalizados que se adaptan a tus necesidades. ¡Trabajemos juntos para hacer que tu contenido destaque!</p>
+        <p>I’m a professional in design and video editing with 4 years of experience. My goal is to help you create visually striking content for your social media, TikTok, YouTube, Twitch, and more. With a focus on creativity and quality, I offer personalized services tailored to your needs. Let’s work together to make your content stand out!</p>
     </section>
 
     <section class="catalogo">
-        <h2>Nuestros Servicios</h2>
+        <h2>Mis Servicios / My Services</h2>
         <div class="servicio">
             <h3>Miniaturas para YouTube / YouTube Thumbnails 3$ USD - $50 MX</h3>
             <div class="ejemplos">
