--- a/index.html
+++ b/index.html
@@ -224,14 +224,12 @@
     <section class="presentacion">
         <h2>Hola Soy Unbreakable Editor / Hi I'm Unbreakable Editor</h2>
         <p>Soy un profesional en diseño y edición de video. Mi objetivo es ayudarte a crear contenido visualmente impactante para tus redes sociales, TikTok, YouTube, Twitch y más. Con un enfoque en la creatividad y la calidad, te ofrezco servicios personalizados que se adaptan a tus necesidades. ¡Trabajemos juntos para hacer que tu contenido destaque!</p>
-        <p>.</p>
-        <p>I’m a professional in design and video editing with 4 years of experience. My goal is to help you create visually striking content for your social media, TikTok, YouTube, Twitch, and more. With a focus on creativity and quality, I offer personalized services tailored to your needs. Let’s work together to make your content stand out!</p>
     </section>
 
     <section class="catalogo">
         <h2>Mis Servicios / My Services</h2>
         <div class="servicio">
-            <h3>Miniaturas para YouTube / YouTube Thumbnails 3$ USD - $50 MX</h3>
+            <h3>Miniaturas para YouTube 3$ USD - $50 MX</h3>
             <div class="ejemplos">
                 <img src="miniatura1.jpg" alt="Miniatura 1">
                 <img src="miniatura2.jpg" alt="Miniatura 2">
@@ -242,15 +240,17 @@
         </div>
 
         <div class="servicio">
-            <h3>Edición de Video / Video editing  (Escanea el QR de mi Instagram / Scan QR) 3$ USD - $50 MX </h3>
+            <h3>Edición de Video 3$ USD - $50 MX </h3>
             <h4>Este repositorio no me deja tener archivos tan pesados como los videos / This repository doesn't allow me to upload files as large as videos</h4>
-            <div class="ejemplos">
-                <img src="qr.jpg" alt="Ejemplos de edicion en mi IG">
+             <div class="red-social">
+                <img src="logo-tiktok.png" alt="WhatsApp">
+                <a href="https://www.tiktok.com/@editor_unbreakable?is_from_webapp=1&sender_device=pc" target="_blank">TikTok</a>
+            </div>
             </div>
         </div>
 
         <div class="servicio">
-            <h3>Banners para Redes Sociales / Social Media Banners 10$ USD - $200 MX</h3>
+            <h3>Banners para Redes Sociales  10$ USD - $200 MX</h3>
             <div class="ejemplos">
                 <img src="banner1.jpg" alt="Banner 1">
                 <img src="banner2.jpg" alt="Banner 2">
@@ -288,7 +288,7 @@
     </section>
 
     <section class="contactos">
-        <h2>Contactos / Contacts</h2>
+        <h2>Contactos </h2>
         <h3>Te cotizo por cualquiera de estos medios / I can send you a quote through any of these platforms</h3>
         <div class="redes-sociales">
             <div class="red-social">
@@ -332,3 +332,4 @@
     </script>
 </body>
 </html>
+
