--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
 
         <div class="servicio">
             <h3>Edición de Video 3$ USD - $50 MX </h3>
-            <h4>Este repositorio no me deja tener archivos tan pesados como los videos / This repository doesn't allow me to upload files as large as videos</h4>
+            <h4>Este repositorio no me deja tener archivos tan pesados como los videos </h4>
              <div class="red-social">
-                <img src="logo-tiktok.png" alt="WhatsApp">
+                <img src="logo-tiktok.png" alt="TikTok">
                 <a href="https://www.tiktok.com/@editor_unbreakable?is_from_webapp=1&sender_device=pc" target="_blank">TikTok</a>
             </div>
             </div>
@@ -289,7 +289,7 @@
 
     <section class="contactos">
         <h2>Contactos </h2>
-        <h3>Te cotizo por cualquiera de estos medios / I can send you a quote through any of these platforms</h3>
+        <h3>Te cotizo por cualquiera de estos medios </h3>
         <div class="redes-sociales">
             <div class="red-social">
                 <img src="logo-instagram.png" alt="Instagram">
@@ -332,4 +332,5 @@
     </script>
 </body>
 </html>
+
 
