--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
         <div class="servicio">
             <h3>Edición de Video 3$ USD - $50 MX </h3>
             <h4>Este repositorio no me deja tener archivos tan pesados como los videos </h4>
-             <div class="red-social">
-                <img src="logo-tiktok.png" alt="TikTok">
+             <div class="ejemplos">
+                <img src="perfil-tiktok.png" alt="TikTok">
                 <a href="https://www.tiktok.com/@editor_unbreakable?is_from_webapp=1&sender_device=pc" target="_blank">TikTok</a>
             </div>
             </div>
@@ -332,5 +332,6 @@
     </script>
 </body>
 </html>
+
 
 
