--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <img src="miniatura4.jpg" alt="Ejemplo de Miniatura 4">
                     <img src="miniatura5.jpg" alt="Ejemplo de Miniatura 5">
                 </div>
-                <a href="https://wa.me/5215513436492" target="_blank" class="btn-solicitar">Solicitar Ahora</a>
+                <a href="https://wa.me/message/OA3QUHR7USUMC1" target="_blank" class="btn-solicitar">Solicitar Ahora</a>
             </div>
 
             <div class="servicio-item">
@@ -298,7 +298,7 @@
                     <img src="banner2.jpg" alt="Ejemplo de Banner 2">
                     <img src="banner3.jpg" alt="Ejemplo de Banner 3">
                 </div>
-                <a href="https://wa.me/5215513436492" target="_blank" class="btn-solicitar">Solicitar Ahora</a>
+                <a href="https://wa.me/message/OA3QUHR7USUMC1" target="_blank" class="btn-solicitar">Solicitar Ahora</a>
             </div>
 
             <div class="servicio-item">
@@ -308,7 +308,7 @@
                     <img src="anuncio2.jpg" alt="Ejemplo de Anuncio 2">
                     <img src="anuncio3.jpg" alt="Ejemplo de Anuncio 3">
                 </div>
-                <a href="https://wa.me/5215513436492" target="_blank" class="btn-solicitar">Solicitar Ahora</a>
+                <a href="https://wa.me/message/OA3QUHR7USUMC1" target="_blank" class="btn-solicitar">Solicitar Ahora</a>
             </div>
 
             <div class="servicio-item">
@@ -318,7 +318,7 @@
                     <img src="emote2.jpg" alt="Ejemplo de Emote 2">
                     <img src="emote3.jpg" alt="Ejemplo de Emote 3">
                 </div>
-                <a href="https://wa.me/5215513436492" target="_blank" class="btn-solicitar">Solicitar Ahora</a>
+                <a href="https://wa.me/message/OA3QUHR7USUMC1" target="_blank" class="btn-solicitar">Solicitar Ahora</a>
             </div>
 
             <div class="servicio-item">
@@ -328,7 +328,7 @@
                     <img src="stream2.jpg" alt="Ejemplo de Stream Overlay 2">
                     <img src="stream3.jpg" alt="Ejemplo de Stream Overlay 3">
                 </div>
-                <a href="https://wa.me/5215513436492" target="_blank" class="btn-solicitar">Solicitar Ahora</a>
+                <a href="https://wa.me/message/OA3QUHR7USUMC1" target="_blank" class="btn-solicitar">Solicitar Ahora</a>
             </div>
 
         </section>
@@ -355,3 +355,4 @@
 
 </body>
 </html>
+
